         Szasz).
20070630 ui/xlib/xdisplay.c: support more colour depths and more scalers (more
         of bug #1686228) (Gergely Szasz).
20070701 machines/specplus3.c: if we can't figure out the dirty state, only
	 write if requested to do so (Fred).
20070701 disk/plusd.c: add some more information to errors in plusd_disk_insert
         (Fred).
20070701 configure.in,ui/gtk/{gtkkeyboard.c,gtkinternals.h,gtkui.c,stock.c}:
	 remove GTK+ 1.x UI. Outdated, and didn't link.
20070703 utils.c,display.c,fuse.c,compat.h,widget/{filesel.c,error.c},
         sound/sdlsound.c,compat/{getopt.c,getopt1.c},settings.pl,
         ui/sdl/sdlui.c: patches for MorphOS (patch #1746269) (Q-Master).
20070703 fuse.c: clean up #ifdefs (Stuart).
20070704 z80/z80.c: don't page in the +D on startup (fixes bug #1746073)
	 (thanks, Fred) (Stuart).
20070704 z80/coretest.c: remove dead code (Stuart).
20070704 disk/{plusd.[ch],wd1770.c},display.c,if1.c,machines/{pentagon.c,
	 scorpion.c,specplus2.c,specplus2a.c,specplus3e.c},profile.c,
	 screenshot.c,timer.c,ui/gtk/{browse.c,fileselector.c,memory.c,
	 pokefinder.c,rollback.c}: various cleanups (Stuart).
20070705 z80/z80_ops.c: speed up z80_do_opcodes() with +D enabled (thanks, Fred)
	 (Stuart).
20070706 z80/z80_ops.c: fix non-gcc compilation (Fred).
20070707 ChangeLog: chuck in a few entries as we go (Fred).
20070707 ChangeLog: fix reset attribution (thanks, Stuart) (Fred).
20070707 ui/win32/win32ui.c: fix compilation without lib765 (Stuart).
20070707 ui/win32/menu_data.{c,h,rc}: add hard reset and +D menu items, and
	 disable RS232 and Sinclair Network menu items in Win32 UI (Stuart).
20070715 ui/win32/{win32display.c,win32ui.c}: coding style cleanups (Stuart).
20070715 ui/win32/{error.c,statusbar.c,win32display.c}: more cleanups (Stuart).
20070715 ui/win32/debugger.c: fix single stepping in the Win32 UI's debugger
	 (Stuart).
20070715 disk/{plusd.c,wd1770.[ch]}: coding style cleanups (Stuart).